FIX: Align css to reflect AA media queries long practice Phase 5 project requirements

--- a/styles/photos.css
+++ b/styles/photos.css
@@ -24,3 +24,20 @@
 }
 
 /* Your code here */
+/* Phase 5: Improve layout for photo cards by adjusting to browser width */
+@media screen and (min-width: 481px) and (max-width: 768px) {
+    .photo-card {
+	display: flex;
+	flex-direction: column;
+	align-items: start;
+	gap: 1rem;
+    }
+    .photo-card .content {
+	display: flex;
+	gap: 1rem;
+    }
+    .photo-card .content p {
+	padding: 1rem 0;
+    }
+}
+
